tests/fixtures/invalid/parenthesized_pointer_parameter.c
int sum(int (*row)[3]) {
    return 0;
}

int main(void) {
    return sum(0);
}
